Fix showing invisible text

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -3,6 +3,7 @@
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/ibm-plex-sans-regular.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   font-style: italic;
   font-weight: 400;
   src: url(../fonts/ibm-plex-sans-italic.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   font-style: normal;
   font-weight: 500;
   src: url(../fonts/ibm-plex-sans-medium.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/barlow-semi-condensed-regular.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -31,6 +35,7 @@
   font-style: normal;
   font-weight: 500;
   src: url(../fonts/barlow-semi-condensed-medium.woff2) format("woff2");
+  font-display: swap;
 }
 
 @font-face {
@@ -38,4 +43,5 @@
   font-style: normal;
   font-weight: 400;
   src: url(../fonts/iosevka-fixed-regular.woff2) format("woff2");
+  font-display: swap;
 }
